--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and
         observed hydrological time series
-Version: 0.3-4
-Date: 2012-07-03
+Version: 0.3-5
+Date: 2012-10-19
 Author: Mauricio Zambrano-Bigiarini [aut, cre]
-Author@R: c(person("Mauricio", "Zambrano-Bigiarini", email =
+Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email =
         "mauricio.zambrano@ing.unitn.it", role=c("aut", "cre") ) )
 Maintainer: Mauricio Zambrano Bigiarini
         <mauricio.zambrano@ing.unitn.it>
@@ -18,7 +18,7 @@ Description: S3 functions implementing both statistical and graphical
         are very welcomed.
 License: GPL (>= 2)
 Depends: R (>= 2.10.0), zoo (>= 1.7-2)
-Imports: hydroTSM (>= 0.3-0), xts (>= 0.8-2), methods
+Imports: hydroTSM (>= 0.3-6), xts (>= 0.8-2), methods
 HowToCite: > citation("hydroGOF")
 URL: http://www.rforge.net/hydroGOF/,
         http://cran.r-project.org/web/packages/hydroGOF/
@@ -28,6 +28,6 @@ Keywords: hydrology, hydrological modelling, hydrologic modeling,
         calibration, verification, goodness-of-fit, objective function,
         simulated vs observed, observed vs simulated
 LazyLoad: yes
-Packaged: 2012-07-03 07:59:09 UTC; zambrhe
+Packaged: 2012-10-19 13:17:52 UTC; zambrhe
 Repository: CRAN
-Date/Publication: 2012-07-03 08:30:23
+Date/Publication: 2012-10-19 16:01:17
