--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,12 @@ Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and
         observed hydrological time series
-Version: 0.3-5
-Date: 2012-10-19
+Version: 0.3-6
+Date: 2013-03-22
 Author: Mauricio Zambrano-Bigiarini [aut, cre]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email =
-        "mauricio.zambrano@ing.unitn.it", role=c("aut", "cre") ) )
-Maintainer: Mauricio Zambrano Bigiarini
-        <mauricio.zambrano@ing.unitn.it>
+        "mzb.devel@gmail.com", role=c("aut", "cre") ) )
+Maintainer: Mauricio Zambrano Bigiarini <mzb.devel@gmail.com>
 Description: S3 functions implementing both statistical and graphical
         goodness-of-fit measures between observed and simulated values,
         mainly oriented to be used during the calibration, validation,
@@ -28,6 +27,7 @@ Keywords: hydrology, hydrological modelling, hydrologic modeling,
         calibration, verification, goodness-of-fit, objective function,
         simulated vs observed, observed vs simulated
 LazyLoad: yes
-Packaged: 2012-10-19 13:17:52 UTC; zambrhe
+Packaged: 2013-03-22 15:02:38 UTC; zambrhe
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-10-19 16:01:17
+Date/Publication: 2013-03-25 06:55:29
