--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,11 @@ Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and
         observed hydrological time series
-Version: 0.3-7
-Date: 2013-06-03
-Author: Mauricio Zambrano-Bigiarini [aut, cre]
-Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email =
-        "mzb.devel@gmail.com", role=c("aut", "cre") ) )
+Version: 0.3-8
+Date: 2014-02-04
+Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre") ) )
 Maintainer: Mauricio Zambrano Bigiarini <mzb.devel@gmail.com>
-Description: S3 functions implementing both statistical and graphical
-        goodness-of-fit measures between observed and simulated values,
-        mainly oriented to be used during the calibration, validation,
-        and application of hydrological models. Missing values in
-        observed and/or simulated values can be removed before
-        computations. Comments / questions / collaboration of any kind
-        are very welcomed.
+Description: S3 functions implementing both statistical and graphical goodness-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can be removed before computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>= 2)
 Depends: R (>= 2.10.0), zoo (>= 1.7-2)
 Imports: hydroTSM (>= 0.3-6), xts (>= 0.8-2), methods
@@ -27,7 +19,8 @@ Keywords: hydrology, hydrological modelling, hydrologic modeling,
         calibration, verification, goodness-of-fit, objective function,
         simulated vs observed, observed vs simulated
 LazyLoad: yes
-Packaged: 2013-06-03 06:58:55 UTC; zambrhe
+Packaged: 2014-02-04 19:48:36 UTC; hzambran
+Author: Mauricio Zambrano-Bigiarini [aut, cre]
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-06-03 09:06:51
+Date/Publication: 2014-02-04 21:05:43
